[DE-572] Applied code review suggestions